--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jira-cli",
+  "name": "jirac",
   "version": "0.1.0",
   "description": "The command line tool for searching, creating or editing JIRA issues",
   "keywords": [
