--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "preferGlobal": true,
   "bin": {
-    "jira": "./bin/jira"
+    "jira": "./bin/jirac"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
